[package]
name = "sonos"
version = "0.1.0"
authors = ["Matt Jones <jonesmr@gmail.com>"]
edition = "2018"

[[bin]]
name = "authserver"
path = "src/authserver/main.rs"

[[bin]]
name = "controller"
path = "src/controller/main.rs"

[dependencies]
oauth2 = "2.0.0-beta.2"
reqwest = "*"
simple-server = "*"
url = "*"
